motif_assesment/slurm-690176.out
  File "motif_assesment_1.py", line 18
    ot_f.write('
               ^
SyntaxError: EOL while scanning string literal
